# packages-site

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bottle_sqlite.py  deb822.py  debian_support.py  depgraph.py  dpkgrepo.py  main.py  rawquery.py  requirements.txt  test_allpages.tcl  test_report.py  test_vercomp.py  update.sh  utils.py  vercomp.c
.github/workflows/: ci.yml
static/: CMakeLists.txt  autocomplete.js  style.css
tools/: CMakeLists.txt
views/: CMakeLists.txt  base.html  changelog.txt  cleanmirror.txt  error.html  error.tsv  files.html  files.tsv  footer.inc.html  ghost.html  ghost.tsv  index.html  lagging.html  lagging.tsv  legend.inc.html  list.inc.html  missing.html  missing.tsv  nav.inc.html  package.html  pagination.inc.html  pkgtrie.js  qa_code.html  qa_code.tsv  qa_index.html  qa_index.tsv  qa_package.html  query.html  repo.html  repo.tsv  revdep.html  revdep.tsv  search.html  search.tsv  srcupd.html  srcupd.tsv  tree.html  tree.tsv  updates.html  updates.tsv
