install(FILES
    base.html
    changelog.txt
    cleanmirror.txt
    error.html
    error.tsv
    error.txt
    files.html
    files.tsv
    ghost.html
    ghost.tsv
    index.html
    lagging.html
    lagging.tsv
    legend.inc.html
    missing.html
    missing.tsv
    nav.inc.html
    package.html
    pagination.inc.html
    pkgtrie.js
    qa_code.html
    qa_code.tsv
    qa_index.html
    qa_index.tsv
    qa_package.html
    query.html
    query.tsv
    repo.html
    repo.tsv
    revdep.html
    revdep.tsv
    search.html
    search.tsv
    srcupd.html
    srcupd.tsv
    tree.html
    tree.tsv
    updates.html
    updates.tsv
DESTINATION "${LIBEXEC_PATH}/views/")
